# eamartinz

./: README.md  tempCodeRunnerFile.python
Python/: pyproject.toml
Python/AULA_01/: 01_Comentarios_de_Codigo.py  02_Funcao_PRINT.py  03_Tipos_de_dados.py  04_Tipos_Numericos.py  05_Tipos_Booleanos.py  06_Conversao_de_dados.py  07_Variaveis_em_Python.py  08_Operadores_Aritmeticos.py  09_Concatenacao_Repeticao.py  10_Precedencia_de_operadores.py  11_Calculo_IMC.py  12_Formatacao_de_variaveis.py  13_Entrada_de_dados.py  14_Condicionais.py  15_if_elis_else.py  teste.py
deteccao_fadiga/: main.py  pyproject.toml
deteccao_fadiga/models/: eye_cnn.pth
deteccao_fadiga/src/: dataset.py  model.py  realtime.py  realtime_ear.py  train.py
detetor_de_fadiga/: main.py  pyproject.toml
detetor_de_fadiga/models/: modelo.pth
detetor_de_fadiga/src/: dataset.py  modelo.py  tempCodeRunnerFile.py  treinar.py
driver-drowsiness-project/: main.py  pyproject.toml
driver-drowsiness-project/src/: train.py
fadiga/: main.py  pyproject.toml
fadiga/src/: dataset0.py  dataset1.py  evaluate.py  model0.py  model1.py  tempCodeRunnerFile.py  treinar0.py  treinar1.py  webcam_inferencia.py
fadiga2/: METRICAS.md  main.py  pyproject.toml
fadiga2/src/: Eyes_Training.py  Eyes_Validation.py  dataset_eyes.py  dataset_mouth.py  evaluate_eyes.py  evaluate_mouth.py  inferencia_webcam.py  model_eyes.py  model_mouth.py  novo_train_mouth.py  tempCodeRunnerFile.py  train_eyes.py  train_mouth.py
fadiga3/: main.py  pyproject.toml
fadiga3/src/: Evaluate_drowsiness.py  Eyes_Evaluate.py  (+4 more)
